# datura

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  meson.build  meson_options.txt
shader/: color.frag  color.vert
src/: CMakeLists.txt  main.cpp  meson.build
src/core/: CMakeLists.txt  autotrans.cpp  autotrans.h  barycenter.h  constants.h  distance.cpp  distance.h  ellipsoid.cpp  ellipsoid.h  manualtrans.cpp  manualtrans.h  meson.build  mode.h  nuage.cpp  nuage.h  pca.cpp  pca.h  pcaauto.cpp  pcaauto.h  pcafactory.cpp  pcafactory.h  pcaimpl.h  pcamanual.cpp  pcamanual.h  quaternion.cpp  quaternion.h  recenter.h  transformation.cpp  transformation.h  transformationfactory.cpp  transformationfactory.h  transformationimpl.cpp  transformationimpl.h
src/gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  meson.build  modelvisu.cpp  modelvisu.h
src/gui/ui/: mainwindow.ui
subprojects/: openglmeshrender.wrap  openglshader.wrap
tests/: CMakeLists.txt  meson.build
tests/nuage/: CMakeLists.txt  main.cpp  meson.build  test_nuage.cpp
